# 2018SummerTraining

./: README.md  百度云.txt
0705_邓豪_C++基础从C到C++/: 7-5培训.docx  Day01.docx  day01 .txt
0705_邓豪_C++基础从C到C++/上午/: Lesson1.vcxproj  lesson1.cpp  lesson1.h  main.cpp
0705_邓豪_C++基础从C到C++/下午/: Lesson1.vcxproj.filters  lesson1.cpp  lesson1.h  main.cpp
0705_邓豪_C++基础从C到C++/晚上/: TableCommand.h  TableControl.cpp  TableControl.h  TableControl.vcxproj  main.cpp
0706_杨康_opencv入门/: 作业.txt
0706_杨康_opencv入门/Homework/: Homework.opensdf  Homework.sln
0706_杨康_opencv入门/SaveROI/: SaveROI.sln
0706_杨康_opencv入门/homework_1/: homework_1.sln
0706_杨康_opencv入门/pro/: pro.sdf  pro.sln
0707频域图像处理/dayo3/: dayo3.sln
0708任务频域图像处理/: 通过相位一致性检测特征（重点阅读）.docx
0709_邓豪_C++基础权限控制_东方水利代码/: VT-L07云台说明书VT2017110235.docx
0712_邓豪邓鑫_项目小球检测_安全帽检测/: 0712.txt  C++的类型转换static-cast、dynamic-cast、reinterpret-cast.docx
0713_杨康_ROS入门二维码识别/: 嵌入式入门.pptx  演示文稿1.pptx
0716_包川_结构光三维重建_光栅编码/: 【百度云】视频前10讲及课件.txt
0719_邓豪_多线程编程/: 多线程编程.ppt
0720_杨康_SLAM建图/: 0720_rplidar.txt  0721笔记_cartographer.txt  0721笔记_cmake升级.txt
图像组代码管理规范/: 0.工程文件规范.txt  1.编程规范.docx  2.说明文档规范.docx
图像组代码管理规范/工程示例/BallDetect/: CMakeLists.txt  README.md  build.sh
图像组代码管理规范/工程示例/BallDetect/Database/: 说明.txt
图像组代码管理规范/工程示例/BallDetect/Documents/: 说明.txt
图像组代码管理规范/工程示例/BallDetect/Include/: CircleDetect.h  DataProcess.h  ManiFold_UART1.hpp  SerialPort.h  说明.txt
图像组代码管理规范/工程示例/BallDetect/Lib/: 说明.txt
图像组代码管理规范/工程示例/BallDetect/Src/: CircleDetect.cpp  DataProcess.cpp  ManiFold_UART1.cpp  SerialPort.cpp  main.cpp  说明.txt
(+222 files in other folders)
